[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Prep/Prep.gd" type="Script" id=1]
[ext_resource path="res://Entities/Painting/img/monalisa.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Icons/Eye.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
Label/fonts/font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.215686, 0.631373, 0.607843, 1 )

[node name="Prep" type="Node2D"]
script = ExtResource( 1 )

[node name="BrushSizeSlider" type="VSlider" parent="."]
margin_left = 731.0
margin_top = 104.0
margin_right = 777.0
margin_bottom = 690.0
max_value = 10.0

[node name="ColorPicker" type="ColorPickerButton" parent="."]
margin_left = 774.0
margin_top = 246.0
margin_right = 1003.0
margin_bottom = 476.0

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_left = 83.0
margin_top = 74.0
margin_right = 697.0
margin_bottom = 746.0

[node name="Canvas" type="ViewportContainer" parent="."]
margin_left = 103.0
margin_top = 103.0
margin_right = 688.0
margin_bottom = 732.0

[node name="Viewport" type="Viewport" parent="Canvas"]
size = Vector2( 585, 629 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ColorRect" type="ColorRect" parent="Canvas/Viewport"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0.894118, 0.894118, 0.894118, 1 )

[node name="DrawingTarget" type="Node2D" parent="Canvas/Viewport"]

[node name="Overlay" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.372549 )
position = Vector2( 399, 502 )
texture = ExtResource( 2 )

[node name="Original" type="Sprite" parent="."]
position = Vector2( 1386, 417 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 809.0
margin_top = 44.0
margin_right = 849.0
margin_bottom = 58.0
rect_scale = Vector2( 5, 5 )
text = "0"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 696.0
margin_top = 97.0
margin_right = 1092.0
margin_bottom = 161.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.0745098, 1, 1 )
text = "QUACKASTIC"

[node name="Test" type="Node2D" parent="."]
visible = false

[node name="test" type="Sprite" parent="Test"]
position = Vector2( 996, 948 )

[node name="test2" type="Sprite" parent="Test"]
position = Vector2( 386, 1329 )

[node name="HideOverlayButton" type="Button" parent="."]
margin_left = 12.0
margin_top = 14.0
margin_right = 209.0
margin_bottom = 52.0
theme = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "HIDE OVERLAY"
icon = ExtResource( 4 )

[connection signal="value_changed" from="BrushSizeSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="HideOverlayButton" to="." method="_on_HideOverlayButton_pressed"]
